[gd_scene load_steps=2 format=3 uid="uid://dexlgtyp4rn4f"]

[ext_resource type="Script" path="res://objects/settings.gd" id="1_dm871"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dm871")

[node name="settingd_label" type="Label" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 38.0
offset_right = 160.0
offset_bottom = 62.0
scale = Vector2(4.7, 4.7)
text = "Settings"

[node name="sound_label" type="Label" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 391.0
offset_right = 197.0
offset_bottom = 414.0
scale = Vector2(4.7, 4.7)
text = "Sound Volume:"

[node name="master_label" type="Label" parent="."]
layout_mode = 0
offset_left = 75.0
offset_top = 168.0
offset_right = 201.0
offset_bottom = 191.0
scale = Vector2(4.7, 4.7)
text = "Master  Volume:"

[node name="music_label" type="Label" parent="."]
layout_mode = 0
offset_left = 78.0
offset_top = 276.0
offset_right = 195.0
offset_bottom = 299.0
scale = Vector2(4.7, 4.7)
text = "Music Volume:"

[node name="sound_slider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 702.0
offset_top = 424.0
offset_right = 1079.0
offset_bottom = 440.0
scale = Vector2(3, 3)
max_value = 1.0
step = 0.1
value = 0.8

[node name="master_slider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 691.0
offset_top = 142.0
offset_right = 1070.0
offset_bottom = 196.0
scale = Vector2(3, 3)
max_value = 1.0
step = 0.1
value = 0.8

[node name="music_slider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 706.0
offset_top = 328.0
offset_right = 1082.0
offset_bottom = 344.0
scale = Vector2(3, 3)
max_value = 1.0
step = 0.1

[node name="Button_close" type="Button" parent="."]
layout_mode = 0
offset_left = 98.0
offset_top = 850.0
offset_right = 213.0
offset_bottom = 881.0
scale = Vector2(3, 3)
text = "Back to Game"

[node name="Button_exit" type="Button" parent="."]
layout_mode = 0
offset_left = 577.0
offset_top = 847.0
offset_right = 692.0
offset_bottom = 878.0
scale = Vector2(3, 3)
text = "Exit Game"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
layout_mode = 0
offset_left = -1.0
offset_top = 1.0
offset_right = 2313.0
offset_bottom = 1310.0
mouse_filter = 2
color = Color(0, 0, 0, 0.756863)

[connection signal="drag_ended" from="sound_slider" to="." method="_on_sound_slider_drag_ended"]
[connection signal="drag_ended" from="master_slider" to="." method="_on_master_slider_drag_ended"]
[connection signal="drag_ended" from="music_slider" to="." method="_on_music_slider_drag_ended"]
[connection signal="pressed" from="Button_close" to="." method="_on_button_close_pressed"]
[connection signal="pressed" from="Button_exit" to="." method="_on_button_exit_pressed"]
